[package]
name = "veil"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64_light = "0.1.5"
clap = { version = "4.2.4", features = ["derive"] }
magic-crypt = "3.1.12"
rpassword = "7.2.0"
clap_complete = "4.2.1"

[build-dependencies]
clap = { version = "4.2.4", features = ["derive"] }
clap_complete = "4.2.1"